# air-quality-pipeline

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  README_RU.md  docker-compose.yml  docker-compose.yml.bak  pyproject.toml  requirements.txt
dbt_models/: .user.yml  dbt_project.yml  profiles.yml
dbt_models/models/: schema.yml  sources.yml
dbt_models/models/marts/: air_quality_mart.sql  dim_geography.sql  dim_time.sql  fact_air_quality.sql
dbt_models/models/staging/: sources.yml  stg_air_quality.sql  stg_air_quality_measurements.sql  stg_cities.sql  stg_countries.sql  stg_states.sql
dlt_pipeline/: openaq_pipeline.py
dlt_pipeline/air_quality/: config.py  pipeline.py  sources.py
dlt_pipeline/air_quality/.dlt/: config.toml  secrets.toml
dlt_pipeline/archive/resources/: schema.yml
docker/: dbt.Dockerfile  dlt.Dockerfile  terraform.Dockerfile
docs/: terraform.md
kestra/: configuration.yml
kestra/flows/: extract_load_flow.yml  install_deps.sh  main_flow.yml  transform_flow.yml
scripts/: create-sa-gcloud.sh  init-gcloud.sh  setup-env.sh
secrets/: .gitkeep
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
