[project]
name = "air-quality-pipeline"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dbt-bigquery>=1.4.0",
    "dbt-core>=1.5.0",
    "dbt-duckdb>=1.5.0",
    "dlt[bigquery]>=1.9.0",
    "google-cloud-bigquery>=3.6.0",
    "google-cloud-storage>=2.7.0",
    "matplotlib>=3.7.1",
    "numpy>=1.24.3",
    "pandas>=1.5.3",
    "pyarrow>=10.0.1",
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "python-terraform>=0.10.1",
    "requests>=2.28.2",
    "seaborn>=0.12.2",
]
